--- a/ProQuant/ProQuant/src/main/webapp/css/header.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/header.css
@@ -20,11 +20,25 @@ body{
 }
 
 #searchInput{
+    color: white;
     outline: none;
     width:35px;
-    border-color: #2e6da4;
+    border-color: #1F4374;
     border-width: 0 0 2px 0;
     background-color: transparent;
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */
+    color:white;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:white;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:white;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:white;
 }
 
 #loginButton{
@@ -283,23 +297,27 @@ body{
 }
 
 .green_pic {
-    /*background-image: url("../images/yes.svg");*/
+    background-image: url("../images/yes.svg");
 }
 .green_word {
     color: #35C48A;
 }
 
 .red_pic {
-    /*background-image: url("../images/no.svg");*/
+    background-image: url("../images/no.svg");
 }
 .red_word {
     color: #D47859;
 }
 
 .yellow_pic {
-    /*background-image: url("../images/warning.svg");*/
+    background-image: url("../images/warning.svg");
 }
 .yellow_word {
     color: #ECC63B;
+}
+
+.active{
+    background-color: #1F4374;
 }
 
