--- a/ProQuant/ProQuant/src/main/webapp/css/myCSS/UserCenterCSS2.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/myCSS/UserCenterCSS2.css
@@ -20,7 +20,7 @@
     background-color: #ffffff;
 }
 
-/*存放头像的容器*/
+/*个人基本信息框样式开始*/
 .user-main-body .content-holder .personal-info-holder{
     width: 100%;
     height: 50px;
@@ -41,7 +41,11 @@
     color: #777;
     margin: 10px;
 }
+/*个人基本信息框样式结束*/
 
+
+
+/*内容和表格框样式开始*/
 .user-main-body .content-holder .function-zone{
     margin-top: 10px;
     height: 450px;
@@ -101,19 +105,98 @@
 }
 
 
+/*个人账户界面样式*/
+#user-account-part{
+    width: 800px;
+}
+#user-account-part .user-data-holder{
+    display: inline-block;
+    text-align: center;
+    width: 250px;
+    height: 400px;
+    /*background-color: #296ec2;*/
+    margin: 5px 5px 5px 5px;
+    padding-top: 10px;
+
+}
+
+#user-account-part .user-data-holder h4{
+    display: block;
+    /*margin: 10px 0 10px 0;*/
+    font-size: 12px;
+    font-weight: 600;
+}
+
+#user-account-part .user-data-holder h4 a{
+    color: #666;
+}
+
+#user-account-part .user-data-holder h2{
+    font-size: 27px;
+    font-weight: 900;
+    color: #296ec2;
+    margin-top: 10px;
+}
+
+#user-account-part .user-item{
+    width: auto;
+    height: 28px;
+    margin: 2px auto;
+    text-align: left;
+}
+
+#user-account-part .user-item h2{
+    display: inline-block;
+    padding-left: 5px;
+    border-left: 3px solid #d75442;
+    margin-left: 30px;
+    margin-right: 20px;
+    font-size: 16px;
+    width: 80px;
+    font-weight: 700;
+}
+
+#user-account-part .user-item div{
+    /*只有对一个容器设置了宽度，再去设置这个容器内部的排列方式才有效，否则将无效*/
+    width: 70px;
+    text-align: center;
+    display: inline-block;
+}
+
+#user-account-part .user-item h4{
+    display: inline-block;
+    margin: 0 auto;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+#user-account-part .user-item #graph-holder{
+    width: 200px;
+    height: 200px;
+    background-color: #e8e8e8;
+    margin-left: 30px;
+    margin-top: 5px;
+}
+
+
+#user-account-part .deal-record-holder{
+    display: inline-block;
+    width: 500px;
+    height: 400px;
+    background: #e8e8e8;
+}
 
 /*清空按钮的样式*/
 
 .function-zone .bootstrap-tab button{
-    display: inline-block;
     width: 60px;
     height: 35px;
     background-color: #296ec2;
     color: #ffffff;
     border-radius: 5px;
     border: 1px solid #ffffff;
-    margin-left: 280px;
-
+    margin-left: 200px;
+    display: none;
 }
 
 
