用户中心界面新增账户部分

--- a/ProQuant/ProQuant/src/main/webapp/css/myCSS/MarketPageChartsCSS.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/myCSS/MarketPageChartsCSS.css
@@ -28,8 +28,10 @@
     display: inline-block;
     width: 200px;
     height: 25px;
-    position: absolute;
-    right: 340px;
+    /*position: absolute;*/
+    /*right: 340px;*/
+    /*right: 26.5%;*/
+    margin-left: 388px;
     background-color: #f8f8f8;
     border: none;
     color: #666;
