--- a/ProQuant/ProQuant/src/main/webapp/css/myCSS/UserCenterCSS2.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/myCSS/UserCenterCSS2.css
@@ -106,9 +106,12 @@
 
 
 /*个人账户界面样式*/
-#user-account-part{
-    width: 800px;
-}
+/*#user-account-part{*/
+    /*width: 800px;*/
+    /*height: 500px;*/
+/*}*/
+
+/*个人账户左边部分*/
 #user-account-part .user-data-holder{
     display: inline-block;
     text-align: center;
@@ -117,7 +120,6 @@
     /*background-color: #296ec2;*/
     margin: 5px 5px 5px 5px;
     padding-top: 10px;
-
 }
 
 #user-account-part .user-data-holder h4{
@@ -179,11 +181,28 @@
 }
 
 
+
+
+/*个人账户右边部分*/
 #user-account-part .deal-record-holder{
     display: inline-block;
     width: 500px;
-    height: 400px;
-    background: #e8e8e8;
+    height: 380px;
+    /*background: #e8e8e8;*/
+    text-align: left;
+    position: absolute;
+    margin: 15px;
+}
+
+#user-account-part .deal-record-holder h2{
+    margin-left: 7px;
+    margin-bottom: 5px;
+    padding-left: 5px;
+    border-left: 3px solid #296ec2;
+    font-size: 16px;
+    width: 80px;
+    font-weight: 700;
+    color: #296ec2;
 }
 
 /*清空按钮的样式*/
