--- a/ProQuant/ProQuant/src/main/webapp/css/myCSS/DialogCSS.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/myCSS/DialogCSS.css
@@ -7,20 +7,24 @@ body{
     position: absolute;
     /*margin-left: 20px;*/
     /*margin-top:20px;*/
-    width:200px;
-    height: 50px;
+    /*width:200px;*/
+    width: auto;
+    /*height: 50px;*/
+    height:auto;
     background:#fff;
     /*padding:10px;*/
     /*设置圆角*/
     -webkit-border-radius:5px;
     -moz-border-radius:5px;
     border-radius:5px;
+    padding: 10px;
 }
 
 /*左三角*/
 .entry-trangle-left{
     position:absolute;
-    bottom:15px;
+    /*bottom:15px;*/
+    top: 15px;
     left:-10px;
     width:0;
     height:0;
