--- a/ProQuant/ProQuant/src/main/webapp/css/myCSS/UserCenterCSS2.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/myCSS/UserCenterCSS2.css
@@ -60,7 +60,32 @@
     table-layout: fixed;
     border:solid #EBEFF0; border-width:1px 0px 0px 1px;
     margin: 3px 5px 5px 7px;
+    text-align: center;
+    border-collapse: collapse; /*边线与旁边的合并*/
 }
+
+
+
+
+/*实现表格内容自动滚动显示开始*/
+.user-main-body .content-holder .function-zone .function-content{
+
+}
+/*.user-main-body .content-holder .function-zone .function-content thead  tr {*/
+    /*!*display: block;*!*/
+/*}*/
+.user-main-body .content-holder .function-zone .function-content table tbody{
+    /*display: block;*/
+    height: 300px;
+    overflow: scroll;
+
+}
+/*实现表格内容自动滚动显示结束*/
+
+
+
+
+
 /*.user-main-body .content-holder .function-zone .function-content table tbody tr:nth-child(even){*/
     /*background-color: #E8E9E8;*/
 /*}*/
@@ -78,7 +103,8 @@
     text-align: center;
     padding: 3px 16px;
     font-size: 12px;
-    border:solid #EBEFF0; border-width:0px 1px 1px 0px;
+    border:solid #EBEFF0;
+    border-width:0px 1px 1px 0px;
 
 }
 .user-main-body .content-holder .function-zone .function-content thead th,
@@ -173,8 +199,8 @@
 }
 
 #user-account-part .user-item #graph-holder{
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
     background-color: #e8e8e8;
     margin-left: 30px;
     margin-top: 5px;
@@ -196,7 +222,7 @@
 
 #user-account-part .deal-record-holder h2{
     margin-left: 7px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     padding-left: 5px;
     border-left: 3px solid #296ec2;
     font-size: 16px;
