--- a/ProQuant/ProQuant/src/main/webapp/css/myCSS/UserCenterCSS2.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/myCSS/UserCenterCSS2.css
@@ -32,6 +32,11 @@ body button:focus{
     padding: 2px 10px 2px 10px;
 }
 
+.user-main-body .content-holder .personal-info-holder input{
+    display: none;
+
+}
+
 .user-main-body .content-holder .personal-info-holder #head-image{
     width: 45px;
     height: 45px;
@@ -433,6 +438,11 @@ body button:focus{
 
 
 
+
+
+
+
+
 /*个人账户右边部分*/
 #user-account-part .deal-record-holder{
     display: inline-block;
@@ -538,8 +548,12 @@ body button:focus{
     top: 3px;
     /*right: 5px;*/
     left: 320px;
-    background-color: #296ec2;
+    background-color: #e;
     margin: 3px auto;
+}
+
+.Easter-Egg .head-image-box{
+    margin: 5px;
 }
 
 
@@ -631,17 +645,7 @@ body button:focus{
     border-right:15px solid #EBEFF0;
 }
 
-/*上三角*/
-/*.top-triangle{*/
-    /*position:absolute;*/
-    /*top:-10px;*/
-    /*left:20px;*/
-    /*width:0;*/
-    /*height:0;*/
-    /*border-left:15px solid transparent;*/
-    /*border-right:15px solid transparent;*/
-    /*border-bottom:15px solid #fff;*/
-/*}*/
+
 
 .edit-info-holder label{
     color: #de654f;
@@ -696,43 +700,83 @@ body button:focus{
 
 
 
-/*为签到标签设置样式*/
-.qiandao-holder{
-    width: 200px;
+/*!*为签到标签设置样式*!*/
+/*.qiandao-holder{*/
+    /*width: 200px;*/
+    /*position: absolute;*/
+    /*top: 100px;*/
+    /*right: 10px;*/
+    /*background-color: #296ec2;*/
+/*}*/
+
+/*.qiandao-holder .my-row{*/
+    /*width: 100%;*/
+    /*margin-left: 5px;*/
+/*}*/
+
+/*.qiandao-holder .my-row .fixed-label{*/
+    /*width: 48px;*/
+/*}*/
+
+/*.qiandao-holder .my-row .unfixed-label{*/
+    /*width: 14px;*/
+/*}*/
+
+/*.qiandao-holder .my-row label{*/
+    /*text-align: center;*/
+    /*font-size: 8px;*/
+    /*margin-left: 6px;*/
+/*}*/
+
+
+/*.qiandao-holder .month-selector{*/
+    /*display: inline-block;*/
+    /*margin-left: 5px;*/
+/*}*/
+/*.qiandao-holder .month-selector label{*/
+    /*margin-left: 0px;*/
+/*}*/
+/*.qiandao-holder .my-row .year-label{*/
+    /*margin-left: 20px;*/
+    /*!*width: 100px;*!*/
+/*}*/
+
+.new-qiandao-holder{
     position: absolute;
-    top: 100px;
-    right: 10px;
-    background-color: #296ec2;
+    z-index: 100000;
+    /*text-align: center;*/
+    width: 240px;
+    padding: 20px;
+    background-color: #FFFFFF;
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    border-radius:5px;
+    box-shadow: 5px 10px 25px #666666;
 }
 
-.qiandao-holder .my-row{
-    width: 100%;
-    margin-left: 5px;
+/*上三角*/
+.top-triangle{
+    position:absolute;
+    top:-10px;
+    left:20px;
+    width:0;
+    height:0;
+    border-left:15px solid transparent;
+    border-right:15px solid transparent;
+    border-bottom:15px solid #fff;
 }
 
-.qiandao-holder .my-row .fixed-label{
-    width: 48px;
-}
-
-.qiandao-holder .my-row .unfixed-label{
-    width: 14px;
-}
-
-.qiandao-holder .my-row label{
-    text-align: center;
-    font-size: 8px;
-    margin-left: 6px;
-}
-
-
-.qiandao-holder .month-selector{
+.new-qiandao-holder h4, .new-qiandao-holder h1{
     display: inline-block;
+}
+
+.new-qiandao-holder h4{
+    color: #777777;
+}
+.new-qiandao-holder h1{
+    color: #d75442;
+    font-size: 30px;
+    font-weight: 700;
     margin-left: 5px;
-}
-.qiandao-holder .month-selector label{
-    margin-left: 0px;
-}
-.qiandao-holder .my-row .year-label{
-    margin-left: 20px;
-    /*width: 100px;*/
+    margin-right: 5px;
 }
