--- a/ProQuant/ProQuant/src/main/webapp/css/myCSS/MarketPageCSS.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/myCSS/MarketPageCSS.css
@@ -141,3 +141,17 @@ body{background: #ebeff0;}
     border-radius: 2px;
 }
 
+
+#top-image-holder{
+    position: relative;
+}
+#zdfb{
+    position: absolute;
+}
+#zdt{
+    position: absolute;
+}
+
+.disappear{
+    display: none;
+}
