--- a/ProQuant/ProQuant/src/main/webapp/css/myCSS/MarketPageChartsCSS.css
+++ b/ProQuant/ProQuant/src/main/webapp/css/myCSS/MarketPageChartsCSS.css
@@ -17,6 +17,7 @@
     color: #666;
     font-weight: 500;
     font-size: 16px;
+    margin-right: 5px;
 }
 
 .market-tab span.cur{
@@ -31,7 +32,7 @@
     /*position: absolute;*/
     /*right: 340px;*/
     /*right: 26.5%;*/
-    margin-left: 388px;
+    margin-left: 481px;
     background-color: #f8f8f8;
     border: none;
     color: #666;
@@ -101,7 +102,7 @@
 
 .hcharts-left{
     position: relative;
-    width: 915px;
+    width: 910px;
     float: left;
 }
 
